Made the font in the header pop out on hover instead of being underlined

--- a/src/main/webapp/stylesheets/teammates.css
+++ b/src/main/webapp/stylesheets/teammates.css
@@ -146,7 +146,8 @@ h2 {
 #navbar li a:hover {
     color: white;
     font-weight: bold;
-    text-decoration: underline;
+    text-decoration: none;
+    font-size: 115%;
 }
 
 .current {
